UI bug fixes related to alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,7 @@ body {
     padding : 0px ;
     margin: 0px;
     font-family: 'Roboto', 'Helvetica', sans-serif;
+    min-height: 600px ;
   }
 
 .tab {
@@ -74,7 +75,7 @@ li:hover {
   }
 
   .method-arguments {
-    padding-top: 10px;
+    padding-top: 0px;
   }
 
   .args-container {
@@ -114,7 +115,7 @@ ul.nav .nav-link.active:hover {
   padding: 10px;
 }
 
-#loggerView {
+.loggerView {
   word-wrap: break-word;/*Used because long log messages going out of div.*/
   border-radius: 5px 5px 5px 5px;
   box-sizing: border-box;
@@ -138,7 +139,7 @@ ul.nav .nav-link.active:hover {
   margin-bottom: 20px;
 }
 
-#logger-container {
+.logger-container {
   padding: 10px;
   margin-top: 50px;
 }
@@ -146,7 +147,7 @@ ul.nav .nav-link.active:hover {
 #app-logs {
   overflow-x: hidden;
   overflow-y: auto;
-  min-height: 50px;
+  min-height: 5px;
   max-height: 400px;
 }
 
@@ -186,6 +187,28 @@ ul.nav .nav-link.active:hover {
   border-bottom-width: .5px;
   border-left-width: .5px;
   border-color: rgba(63, 81, 181, 1);
+}
+
+.label-title {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: rgba(0,0,0,.54);
+  font-weight: 500; 
+}
+
+.chk-text {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 12px;
+  color: rgba(0,0,0,.54);
+  font-weight: 500;
+}
+
+.logger-text {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 12px;
+  color: rgba(0,0,0,.54);
+  font-weight: 500;
 }
 
 /* .mdl-layout__header-row {
